k8s-manifests/bike/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-app
  namespace: bike
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bike
  template:
    metadata:
      labels:
        app: bike
    spec:
      containers:
      - name: bike
        image: 426192960096.dkr.ecr.us-east-1.amazonaws.com/bike:v1
        ports:
        - containerPort: 5000
