k8s-manifests/bike/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bike-service
  namespace: bike
spec:
  selector:
    app: bike
  ports:
  - port: 80
    targetPort: 5000
  type: NodePort
