k8s-manifests/bike/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bike-ingress
  namespace: bike
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /bike
        pathType: Prefix
        backend:
          service:
            name: bike-service
            port:
              number: 80
